--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
